--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -10,7 +10,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="Sign up"
         tools:layout_editor_absoluteX="161dp"
         tools:layout_editor_absoluteY="515dp" />
 
@@ -19,67 +19,66 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="Name"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="28dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="106dp"
-        android:layout_height="42dp"
-        android:text="Name"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="42dp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="106dp"
-        android:layout_height="42dp"
-        android:text="Email id"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="135dp" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="106dp"
-        android:layout_height="42dp"
-        android:text="Phone number"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="220dp" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="106dp"
-        android:layout_height="42dp"
-        android:text="City"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="324dp" />
+        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteY="169dp" />
 
     <EditText
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="Email id"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="123dp" />
+        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteY="232dp" />
 
     <EditText
         android:id="@+id/editText6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="Phone number"
         android:inputType="phone"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="220dp" />
+        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteY="359dp" />
 
     <EditText
-        android:id="@+id/editText8"
+        android:id="@+id/editText3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="170dp"
-        tools:layout_editor_absoluteY="324dp" />
+        android:hint="Password"
+        android:inputType="textPassword"
+        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteY="293dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        tools:layout_editor_absoluteX="249dp"
+        tools:layout_editor_absoluteY="16dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="174dp"
+        android:layout_height="47dp"
+        android:autoSizeTextType="25dp"
+        android:text="Have an account already?"
+        tools:layout_editor_absoluteX="34dp"
+        tools:layout_editor_absoluteY="16dp"
+        android:textSize="20dp"/>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="320dp"
+        android:layout_height="40dp"
+        android:text="Enter your account details"
+        android:textSize="25dp"
+        tools:layout_editor_absoluteX="39dp"
+        tools:layout_editor_absoluteY="92dp" />
 
 </android.support.constraint.ConstraintLayout>
