java firebase done

--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -51,4 +51,12 @@
         tools:layout_editor_absoluteX="104dp"
         tools:layout_editor_absoluteY="297dp" />
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="203dp"
+        android:layout_height="37dp"
+        android:text="click here to sign up"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="389dp" />
+
 </android.support.constraint.ConstraintLayout>
